feat(health): add database info
